# trabalho-ci-cd

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.promotion  README.md  pyproject.toml  sonar-project.properties
ci/: compose.yml  docker-compose.yml
deploy/: docker-compose.yml
src/concilia_core/: main.py
src/concilia_core/api/: health.py  transactions.py
src/concilia_core/service/: models.py  operations.py  utils.py
tests/: test_unit_operations.py  test_unit_utils.py
